# python-scripts

./: README.md  pyproject.toml
data/mps/hellopython/: pyproject.toml
marcuson_python_scripts/: bin_list.py  cli.py  pkg_utils.py
scripts/: build.py  clean.py  const.py  git_deps.py
src/marcuson_python_scripts/: __init__.py  cli.py
tools/mealietag/: README.md  pyproject.toml
tools/mealietag/mealietag/cli/: main.py
tools/organizemarc/: pyproject.toml  requirements.txt
tools/organizemarc/organizemarc/cli/: config.py  main.py
tools/organizemarc/organizemarc/data/: config.yaml
tools/organizemarc/organizemarc/filters/: ade.py  airbnb.py  date.py  enel.py  eramo.py  fatture_in_cloud.py  montepulciano.py  mps.py  pdf.py  tim.py  utils.py
