[project]
name = "marcuson-python-scripts"
version = "0.3.0"
description = "Meta-package that installs multiple CLI tools from Git"
requires-python = ">=3.13,<4.0"
dependencies = [
    "mealietag @ git+https://github.com/marcuson/python-scripts.git#subdirectory=tools/mealietag",
]

[project.scripts]
mealietag = "mealietag.cli.main:cli"


# Poetry
[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
tomlkit = "^0.13.3"


# Poe
[tool.poe.poetry_hooks]
pre_sync = "presync"

[tool.poe.tasks.presync]
sequence = ["git-deps-delete"]


[tool.poe.tasks.gen]
sequence = ["git-deps-generate"]

[tool.poe.tasks.git-deps-delete]
script = "scripts.git_deps:delete"
help = "Delete pyproject.toml project.dependencies"

[tool.poe.tasks.git-deps-generate]
script = "scripts.git_deps:generate"
help = "Generate pyproject.toml project.dependencies"
