# Project info
[project]
name = "organizemarc"
version = "0.2.0"
description = ""
authors = [{ name = "Leonardo Marcucci", email = "marcuson.nn90@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "pdfplumber (>=0.11.7,<0.12.0)",
  "typer (>=0.16.0,<0.17.0)",
  "organize-tool @ git+https://github.com/tfeldmann/organize.git",
]

[project.scripts]
organizemarc = "organizemarc.cli.main:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# Poetry
[tool.poetry]
include = ["organizemarc/data/**"]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"


# Poe
[tool.poe.poetry_hooks]
post_sync = "gen-req"

[tool.poe.tasks.gen-req]
shell = "poetry export -f requirements.txt --output requirements.txt"
help = "Generate requirements.txt for legacy compatibility"
