[project]
name = "hellopython"
version = "0.1.0"
description = "Hello Python!"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hellopython = "hellopython.cli:main"

[build-system]
requires = ["uv-build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = [".venv"]
wheel-exclude = [".venv"]
